[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.1"
# winit = "0.28.6"
winit = { git = "https://github.com/rust-windowing/winit.git", branch = "master" }
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.6"
ecs = { path = "../ECS" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
rayon = "1.7.0"
# ron = "0.8"
